# ground_extarct_in_country_road

./: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
include/ground_detect/: Grid_map.hpp  LinePart.hpp  LineVector.hpp  utility.hpp
launch/: ground_detect.launch  ground_detect_2VLP16.launch  ground_detect_2VLP16_research.launch  ground_detect_grid_map.launch  ground_detect_ransac.launch  ground_detect_research.launch
msg/: road_range.msg
rviz/: grid_map.rviz  model3.rviz  ransac_plane.rviz  result.rviz
src/: blank.cpp  feature_based_select.cpp  grid_map_analyser.cpp  lidar_line_analyse.cpp  local_env_provider.cpp  path_provider.cpp  ransac_get_plane.cpp  side_lidar_line_analyse.cpp  vector_based_select.cpp
